--- a/index.html
+++ b/index.html
@@ -1,2 +1,75 @@
-<h1>Hello world!</h1>
-<p>Welcome to my first web page.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Evan Malia's ePortfolio - Self Assessment</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="./script.js"></script>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Evan Malia</h1>
+            <h2>CS499 ePortfolio</h2>
+            <div class="hamburger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </header>
+
+    <nav class="nav-menu">
+        <div class="close-menu">&times;</div>
+        <ul>
+            <li><a href="index.html" class="active-page">Self Assessment</a></li>
+            <li><a href="code-review.html">Code Review</a></li>
+            <li><a href="enhancement-1.html">Enhancement 1</a></li>
+            <li><a href="enhancement-2.html">Enhancement 2</a></li>
+            <li><a href="enhancement-3.html">Enhancement 3</a></li>
+        </ul>
+    </nav>
+
+    <main class="container">
+        <section>
+            <h3>Professional Self Assessment</h3>
+            <h4>About Me: </h4>
+            <p class='mb-2'>
+              My computer science journey began in high school, creating simple scripts and developing basic command-line text games. Early but important applications of core programming principles. Over the past six years, through continuous learning and facing significant challenges, I have become a stronger programmer. These hardships lead to motivational or demotivated mindsets, but continually honing my skills and staying current with emerging trends and technologies usually get me out of my temporary rut.
+              </p>
+            <p class='mb-2'>
+              The career path I aspire to is becoming a software engineer, where I can create websites for fun, solve complex programming problems, and eventually collaborate with professional teams to develop applications. My passion stems from years of tinkering with and building computers,  an innate desire to understand their inner workings more deeply. Along this journey, I also developed a love for UI/UX design, ensuring users, including myself, can purposefully and intuitively navigate my applications. I particularly enjoy adding non-functional features that bring polish and interactive functionality, even when they aren’t strictly necessary for an application to operate.
+              </p>
+            <h4>Content: </h4>
+            <p class='mb-2'>
+              While in my Computer Science journey, I have gained and improved critical skills, including problem-solving, attention to detail, security awareness, and project organization. Also, a deep curiosity for solving complex problems through automation. Adopting a security mindset has been especially important for my future as a high-level software engineer. It also allows me to design and develop code that prioritizes protection against bad actors and efficiency. Additionally, I learned that building projects out in small, testable blocks, using pseudocode and UML diagrams to plan, leads to modular and more easily maintainable projects. As Abraham Lincoln said, “Give me six hours to chop down a tree and I will spend the first four sharpening the axe.” This mindset applies to software generation too, since creating pseudocode or UML diagrams is a crucial step to ensure effective project development, rather than diving straight into coding without a plan. Debugging and testing are critical, especially as projects grow more complex. Recognizing the value of incorporating defensive programming practices has helped ensure that my applications are secure.
+              </p>
+              <p class='mb-2'>
+              One practical example of my curiosity and problem-solving skills is when I worked as a POS (Point of Sale) device repair technician. We had a device that required manually inputting network information, which often caused conflicts with the computer’s network settings. To solve this, I created a bash script that automated the process, allowing technicians to input network details without causing conflicts, streamlining the workflow, and improving time efficiency.
+              </p>
+              <p class='mb-2'>
+              Whether through coursework, external projects, or professional experiences, I have learned the importance of clear communication and collaboration. Communicating with good oral and written skills goes a long way. Additionally, writing clean, well-organized code with purposeful in-line comments ensures that I, and others, can easily understand and maintain it in the future. I have also recognized that preparing communication for different audiences, especially non-technical stakeholders, is vital for effective communication. When designing applications that involve data structures and algorithms, software architecture, or databases, I carefully evaluate trade-offs. Choosing the right libraries, understanding their vulnerabilities, and balancing pros and cons are critical decisions in the software development lifecycle.
+              </p>
+              <p class='mb-2'>
+              My software engineering and design skills are showcased in all my artifacts.  My web application, GrocConnect, has an intuitive UI, and all buttons have a purpose, even though they might be fully implemented in the current iteration of my program. My AlgoViz application uses tkinter as a GUI generator, and inadvertently, UI/UX becomes a large part of the program, so the users are able to identify the functionality of the widgets effectively and display a warning when the user enters invalid parameters. In GrocConnect, I implemented intuitive, error-handling forms for admin users to modify the database, ensuring a smooth and secure data management experience.
+              </p>
+              <p class='mb-2'>
+              Data structures and algorithms are a main focus for employers to filter through potential hires, so it has always been something I have been passionate about learning and solving complex problems. In my AlgoViz app, I have effectively designed a way for users to see a data structure being created in real-time, or the different ways sorting algorithms affect a dataset. Security is the main focus of all my current and future projects. Across my portfolio, I demonstrate effective input sanitization, error handling, and protection of sensitive information. In my third artifact, I highlight my secure user authentication system using JWTs, where user passwords are securely hashed and never stored in plain text.
+
+              </p>
+        </section>
+    </main>
+
+    <footer>
+      <p>Connect with me:</p>
+      <div class="footer-links">
+                <a href="https://github.com/esm05/" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://www.linkedin.com/in/evan-malia-608165220/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            </div>
+        <div class="container">
+            <p>&copy; 2025 Evan Malia. All rights reserved.</p>
+        </div>
+    </footer>
+  </body>
+</html>
