--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <ul>
             <li><a href="index.html" class="active-page">Self Assessment</a></li>
             <li><a href="code-review.html">Code Review</a></li>
-            <li><a href="enhancement-1.html">Enhancement 1</a></li>
-            <li><a href="enhancement-2.html">Enhancement 2</a></li>
-            <li><a href="enhancement-3.html">Enhancement 3</a></li>
+            <li><a href="enhancement-one.html">Enhancement 1</a></li>
+            <li><a href="enhancement-two.html">Enhancement 2</a></li>
+            <li><a href="enhancement-three.html">Enhancement 3</a></li>
         </ul>
     </nav>
 
