--- a/enhancement-one.html
+++ b/enhancement-one.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio - Enhancement 1</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
     <header>
@@ -22,9 +24,9 @@
         <ul>
             <li><a href="index.html">Self Assessment</a></li>
             <li><a href="code-review.html">Code Review</a></li>
-            <li><a href="enhancement-1.html" class="active-page">Enhancement 1</a></li>
-            <li><a href="enhancement-2.html">Enhancement 2</a></li>
-            <li><a href="enhancement-3.html">Enhancement 3</a></li>
+            <li><a href="enhancement-one.html" class="active-page">Enhancement 1</a></li>
+            <li><a href="enhancement-two.html">Enhancement 2</a></li>
+            <li><a href="enhancement-three.html">Enhancement 3</a></li>
         </ul>
     </nav>
 
