--- a/enhancement-two.html
+++ b/enhancement-two.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio - Enhancement 1</title>
+    <title>My Portfolio - Enhancement 2</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Enhancement One</h1>
+            <h1>Enhancement Two</h1>
             <div class="hamburger">
                 <div></div>
                 <div></div>
@@ -22,9 +24,9 @@
         <ul>
             <li><a href="index.html">Self Assessment</a></li>
             <li><a href="code-review.html">Code Review</a></li>
-            <li><a href="enhancement-1.html">Enhancement 1</a></li>
-            <li><a href="enhancement-2.html" class="active-page">Enhancement 2</a></li>
-            <li><a href="enhancement-3.html">Enhancement 3</a></li>
+            <li><a href="enhancement-one.html">Enhancement 1</a></li>
+            <li><a href="enhancement-two.html" class="active-page">Enhancement 2</a></li>
+            <li><a href="enhancement-three.html">Enhancement 3</a></li>
         </ul>
     </nav>
 
