--- a/code-review.html
+++ b/code-review.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio - Code Review</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="./script.js"></script>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Code Review</h1>
+            <div class="hamburger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </header>
 
+    <nav class="nav-menu">
+        <div class="close-menu">&times;</div>
+        <ul>
+            <li><a href="index.html">Self Assessment</a></li>
+            <li><a href="code-review.html" class="active-page">Code Review</a></li>
+            <li><a href="enhancement-one.html">Enhancement 1</a></li>
+            <li><a href="enhancement-two.html">Enhancement 2</a></li>
+            <li><a href="enhancement-three.html">Enhancement 3</a></li>
+        </ul>
+    </nav>
+
+    <main class="container">
+        <section>
+            <h2>Code Review</h2>
+        </section>
+
+      <div class="video-container mb-3">
+                <div class="video-wrapper">
+                    <iframe 
+                        width="560" 
+                        height="315" 
+                        src="https://youtu.be/2sFW_950muM" 
+                        title="Code Review Video" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
+      </main>
+
+    <footer>
+      <p>Connect with me:</p>
+      <div class="footer-links">
+                <a href="https://github.com/esm05/" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://www.linkedin.com/in/evan-malia-608165220/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            </div>
+        <div class="container">
+            <p>&copy; 2025 Your Name. All rights reserved.</p>
+        </div>
+    </footer>
+  </body>
+</html>
