Fixed youtube link

--- a/code-review.html
+++ b/code-review.html
@@ -40,7 +40,7 @@
                     <iframe 
                         width="560" 
                         height="315" 
-                        src="https://youtu.be/2sFW_950muM" 
+                        src="https://youtube.com/embed/2sFW_950muM" 
                         title="Code Review Video" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
