--- a/enhancement-one.html
+++ b/enhancement-one.html
@@ -48,6 +48,15 @@
             <h3>Reflection</h3>
             <p>
           	I have gained a deeper understanding of web server development and the intricate relationship between the front end of a website and how the server delivers functionality through JavaScript and HTML. One of the challenges I faced was setting up the server correctly. To ensure I adhered to industry standards and implemented proper error handling in the console output, I revisited material from a previous course on web server development. This experience reinforced best practices and improved my ability to debug and structure a robust server-side application.
+            </p>
+            <div class="links-container mb-2">
+                    <p class="mb-1">
+                        <strong>GitHub Repository:</strong>
+                        <a href="https://github.com/esm05/Grocconect/tree/week4" target="_blank" class="link">
+                            View Enhancement One Code on GitHub
+                        </a>
+                    </p>
+            </div>
         </section>
     </main>
 
