--- a/enhancement-two.html
+++ b/enhancement-two.html
@@ -50,6 +50,14 @@
             <p>
           	Creating this project from scratch, especially using a tool I hadn’t worked with before, came with its difficulties. One of the biggest surprises was how much time and effort the UI required, not just in layout, but in making it intuitive and visually meaningful. I also learned a lot about visual communication in programming and conveying certain aspects of a sorting algorithm, so it is easily digestible. Additionally, I learned how to represent data structures and algorithms in a way that’s both accurate and accessible to learners. The experience pushed me to solve problems creatively and strengthen my technical and design skills.
             </p>
+            <div class="links-container mb-2">
+                    <p class="mb-1">
+                        <strong>GitHub Repository:</strong>
+                        <a href="https://github.com/esm05/AlgoViz" target="_blank" class="link">
+                            View Enhancement Two Code on GitHub
+                        </a>
+                    </p>
+            </div>
         </section>
     </main>
 
