--- a/enhancement-three.html
+++ b/enhancement-three.html
@@ -56,8 +56,8 @@
             <p>
           	Enhancing and modifying this artifact was a valuable learning experience that deepened my understanding of full-stack web development, particularly in connecting a front-end interface to a back-end database using MongoDB and Express. As I built and improved the database integration within my Grocconnect application, I gained hands-on experience in designing RESTful APIs, structuring database schemas, and ensuring smooth communication between the server and the database. I am still learning ways to enhance the code base, like introducing a shopping cart where the guest user would be able to purchase the items if implemented for a grocery store. There is still a lot to learn in connecting the backend to the frontend servers of Express or rapid rendering, like with Angular. 
             </p>
-            <div class="links-container mb-2">
-                    <p class="mb-1">
+            <div>
+                    <p>
                         <strong>GitHub Repository:</strong>
                         <a href="https://github.com/esm05/Grocconect" target="_blank" class="link">
                             View Enhancement Three Code on GitHub
